# edwi-projects

./: .gitignore  README.md  main.py  pyproject.toml
lab1/: crawler.py
lab1/results/: layer.csv
lab1/results/layer0/: content0.csv  emails0.csv
lab2/: indexer.py
lab3/: ngram.py
lab4/: idf.py
lab6/: app.py  bot.py
