[tool.poetry]
name = "edwi"
version = "0.1.0"
description = "\"Set of task for university subject 'Eksploracja danych w internecie'\""
authors = ["Jan Jędrzejewski <janjedrzejewski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
