[tool.poetry]
name = "edwi"
version = "0.1.0"
description = "\"Set of task for university subject 'Eksploracja danych w internecie'\""
authors = ["Jan Jędrzejewski <janjedrzejewski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
numpy = "^1.22.3"
Flask = "^2.1.2"
selenium = "^4.2.0"
webdriver-manager = "^3.7.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
